Correction z-index loader

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -570,10 +570,13 @@ opacity: 1;
 
   90%{
 opacity: 1;
+z-index: 3;
 
   }
   100%{
     opacity: 0;
+   
+    z-index: -3;
 
   }
 
